--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191844-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191844-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -202,7 +202,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Cape Girardeau, Missouri</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -220,11 +220,11 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 physician practices, and services. Expanding across Virginia, West Virginia, and
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4485453002'>Job Application for ST, Speech Therapist, Senior Living at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4485453002'>Job Application for ST, Speech Therapist, Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Winston Salem, NC</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/d7fb198513f7-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/d7fb198513f7-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -249,7 +249,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qJGaVfwe&k=Job&j=onMUafwX&__jvst=JobVite+Referral&__jvsd=sQFzShwI&__jvsc=Twitter&bid=nAse8MwF'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qJGaVfwe&k=Job&j=onMUafwX&__jvst=JobVite+Referral&__jvsd=sQFzShwI&__jvsc=Twitter&bid=nAse8MwF'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -273,7 +273,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/ctc/job/gscsj549rdacs1ktpyjur7meoo'>Cherokee County - Speech Language Pathologist | CTC Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/gscsj549rdacs1ktpyjur7meoo'>Cherokee County - Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Canton, GA</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -289,7 +289,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Georgetown, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4476791002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4476791002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -305,7 +305,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Jefferson City, MO, USA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999697182977-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999697182977-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbia, MO, USA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -333,7 +333,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
+<h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -341,11 +341,11 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696886449-speech-therapist'>VIVA Pediatrics Speech Therapist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696886449-speech-therapist'>VIVA Pediatrics Speech Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696886608-speech-therapist'>VIVA Pediatrics Speech Therapist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696886608-speech-therapist'>VIVA Pediatrics Speech Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Carrollton, TX</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -357,7 +357,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Reading, PA Reading, PA</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/teleteachers/jobs/4468345002'>Job Application for We are always looking for GREAT Speech-Language Pathologists!  at TeleTeachers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/teleteachers/jobs/4468345002'>Job Application for We are always looking for GREAT Speech-Language Pathologists!  at TeleTeachers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
