--- a/data-architect.html
+++ b/data-architect.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=ohjnafwR&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=n0qtmMww'>Accudata Systems, Inc. Careers - Data Center &amp; Cloud Solutions Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=ohjnafwR&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=n0qtmMww'>Accudata Systems, Inc. Careers - Data Center &amp; Cloud Solutions Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -111,7 +111,7 @@ dig?...</p>
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/data-solutions-architect-63502'>Data Solutions Architect - Vodafone Careers</a></h5> 
+<h5><a href='https://vodafone.referrals.selectminds.com/jobs/data-solutions-architect-63502'>Data Solutions Architect - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light">London London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -240,7 +240,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -254,7 +254,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51'>Ridango AS - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -318,11 +318,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697502592-vice-president-data-architecture'>Publicis Groupe Vice President, Data Architecture | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697502592-vice-president-data-architecture'>Publicis Groupe Vice President, Data Architecture | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -344,7 +344,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/5103812e-cf8f-4a44-be4d-f07888eae53d'>Datacom - Digital Workplace Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/5103812e-cf8f-4a44-be4d-f07888eae53d'>Datacom - Digital Workplace Architect</a></h5> 
 <p><span class="badge badge-light">Canberra  Canberra</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -408,7 +408,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Apply online for the job of Big Data Architect at Tiger Analytics.</p>
 <hr/>
-<h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -444,7 +444,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHk9VfwP&k=Job&j=oaqV9fwo&__jvst=Employee&__jvsd=sMuo8gwx&__jvsc=Twitter&bid=nkUw6Mw7'>Conviva Careers - Principal Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHk9VfwP&k=Job&j=oaqV9fwo&__jvst=Employee&__jvsd=sMuo8gwx&__jvsc=Twitter&bid=nkUw6Mw7'>Conviva Careers - Principal Data Architect</a></h5> 
 <p><span class="badge badge-light">Foster City California</span></p>
 <p>Posted on:: 2019-10-10</p>
 <hr/>
@@ -464,7 +464,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/oDehbfw3'>Nutanix Careers - Database Specialist Solution Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nutanix/job/oDehbfw3'>Nutanix Careers - Database Specialist Solution Architect</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
